--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">NetworkTest</string>
+
+    <string name="book_title">Title: %1$s</string>
+    <string name="book_authors">Authors: %1$s</string>
+    <string name="search_book_by_title">Search book by Title</string>
+    <string name="btn_text_search">Search</string>
+    <string-array name="book_type">
+        <item>all</item>
+        <item>books</item>
+        <item>magazines</item>
+    </string-array>
 </resources>
